# glTest

./: CMakeLists.txt  compile_commands.json  makefile
include/glad/: glad.h
src/: block.c  block.h  camera.c  camera.h  fragment.shader  glad.c  line.c  line.h  main.c  model.c  model.h  pane.c  pane.h  shader.c  shader.h  window.c  window.h
src/shader/: default.vertex  line.fragment  rainbow.fragment  test.fragment
